# content-creator

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
.github/workflows/: tests.yaml
docs/: CINEMATIC_TRANSITIONS.md  README.md
docs/commands/: calibrate.md  doctor.md  from-audio.md  from-text.md  global-options.md  lexicon-doctor.md  profanity-debug.md  transcribe.md
examples/: envrc.example
examples/prompts/: test-example-transcription.txt  test-transcription.txt  test-video.txt
src/content_creator/: __main__.py  cli.py  config.py  hf_client.py  media.py  pipeline.py  planner.py  profanity_sfx.py
src/content_creator/data/: profanity_words.txt
src/video_generator/: __main__.py  cli.py  config.py  hf_client.py  media.py  pipeline.py
tests/: test_cli.py  test_config.py  test_hf_client.py  test_media.py  test_pipeline.py  test_planner.py  test_profanity_sfx.py
