[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-generator"
version = "0.1.0"
description = "CLI-first AI video generation pipeline using Hugging Face inference APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "huggingface_hub>=0.30.0,<1.0",
  "Pillow>=10.4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]
diarization = [
  "numpy<2",
  "pyannote.audio>=3.1.0",
]

[project.scripts]
video-generator = "video_generator.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
